tests/machine/x/go/record_assign.error
Error on line 0: output mismatch
-- got --
1
-- want --
0
1: //go:build ignore
