tests/machine/x/go/record_assign.go
//go:build ignore

// Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z

package main

import (
	"fmt"
)

type Counter struct {
	N int `json:"n"`
}

type v = Counter

// line 3
func inc(c *Counter) {
	c.N = (c.N + 1)
}

var c Counter

func main() {
	c = Counter{N: 0}
	inc(&c)
	fmt.Println(c.N)
}
